# numsim-cas

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  COMMERCIAL.md  CONTRIBUTING.md  DOCUMENTATION.md  LICENSE  NOTICE  PROJECT_REVIEW.md  README.md  REVIEW.md  REVIEW_ROUND2.md  plan.md
.github/workflows/: clang-format-check.yml  clang-tidy-check.yml  cmake-multi-platform.yml  dco-check.yml  testing.yml
LICENSES/: LicenseRef-Commercial.txt
benchmarks/poly_verse_variant/bench/: CMakeLists.txt  main.cpp  main_13.cpp
benchmarks/poly_verse_variant/build-bench-Desktop_Qt_6_5_1_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  bench  build.ninja  cmake_install.cmake  qtcsettings.cmake
benchmarks/poly_verse_variant/build-bench-Desktop_Qt_6_5_1_GCC_64bit-Profile/: CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
benchmarks/poly_verse_variant/build-bench-Desktop_Qt_6_5_1_GCC_64bit-Release/: .ninja_deps  .ninja_log  CMakeCache.txt  bench  build.ninja  cmake_install.cmake  qtcsettings.cmake
cmake/: NumSim_CASConfig.cmake.in  tmechConfig.cmake.in  tmechTargets.cmake.in  tmech_marker_check.cpp
docs/: core.md  cross-domain.md  differentiation.md  index.md  parser.md  scalar.md  simplifier-coverage.md  sympy-assumption-redesign.md  tensor-to-scalar.md  tensor.md
examples/: CMakeLists.txt  assumptions_basics.cpp  linear_elasticity.cpp  parser_basics.cpp  parser_error_handling.cpp  parser_symbol_table.cpp  parser_tensor_diff.cpp  scalar_basics.cpp  scalar_differentiation.cpp  scalar_evaluation.cpp  tensor_basics.cpp  tensor_to_scalar_basics.cpp
include/numsim_cas/: assumptions.h  basic_functions.h  binary_op.h  compare_equal_visitor.h  compare_less_visitor.h  expression.h  expression_crtp.h  expression_holder.h  functions.h  get_hash_scalar.h  is_symbol.h  latex_config.h  latex_printer_base.h  n_ary_tree.h  n_ary_vector.h  nonlinear_solver_base.h  numsim_cas.h  numsim_cas_forward.h  numsim_cas_type_traits.h  numsim_cas_variant.h  operators.h  printer_base.h  result_expression.h  simplify_rule_registry.h  symbol_base.h  tensor_type_defs.h  type_list.h  unary_op.h  update_hash.h  utility_func.h
include/numsim_cas/core/: assumptions.h  binary_op.h  binary_ops.h  cas_error.h  compare_equal_visitor.h  compare_less_visitor.h  contains_expression.h  core_fwd.h  diff.h  domain_traits.h  evaluator_base.h  expression.h  expression_holder.h  hash_functions.h  limit_algebra.h  limit_result.h  make_constant.h  make_negative.h  n_ary_tree.h  n_ary_vector.h  operators.h  positivity_propagation.h  print_mul_fractions.h  promote_expr.h  require_symbol.h  scalar_number.h  substitute.h  symbol_base.h  tag_invoke.h  ternary_op.h  unary_op.h  visitor_base.h
include/numsim_cas/parser/: parse_error.h  parser.h  symbol_table.h
include/numsim_cas/predicate/: predicate_definitions.h  predicate_expression.h  predicate_false.h  predicate_globals.h  predicate_io.h  predicate_node_list.h  predicate_true.h  predicate_visitor_typedef.h
include/numsim_cas/scalar/: scalar.h  scalar_abs.h  scalar_acos.h  scalar_add.h  scalar_all.h  scalar_asin.h  scalar_assume.h  scalar_atan.h  scalar_binary_simplify_fwd.h  scalar_binary_simplify_imp.h  scalar_compare_less_visitor.h  scalar_constant.h  scalar_cos.h  scalar_definitions.h  scalar_diff.h  scalar_div.h  scalar_domain_traits.h  scalar_eq.h  scalar_exp.h  scalar_expression.h  scalar_function.h  scalar_functions.h  scalar_functions_fwd.h  scalar_ge.h  scalar_globals.h  scalar_gt.h  scalar_if_then_else.h  scalar_io.h  scalar_latex_io.h  scalar_le.h  scalar_log.h  scalar_lt.h  scalar_make_constant.h  scalar_max.h  scalar_min.h  scalar_mul.h  scalar_named_expression.h  scalar_ne.h  scalar_negativ.h  scalar_negative.h  (+15 more)
include/numsim_cas/tensor/: basis_change.h  identity_tensor.h  inner_product_wrapper.h  kronecker_delta.h  levi_civita_tensor.h  outer_product_wrapper.h  projection_tensor.h  projector_algebra.h  scalar_tensor_op.h  sequence.h  skew_classification.h  structural_propagation.h  tensor.h  tensor_add.h  tensor_algebra_kind.h  tensor_assume.h  tensor_compare_less_visitor.h  tensor_constant.h  tensor_data.h  tensor_data_add.h  tensor_data_outer_product.h  tensor_data_sub.h  tensor_definitions.h  tensor_diff.h  tensor_domain_traits.h  tensor_expression.h  tensor_functions.h  tensor_functions_fwd.h  tensor_globals.h  tensor_identity.h  tensor_if_then_else.h  tensor_if_then_else_scalar.h  tensor_if_then_else_t2s.h  tensor_io.h  tensor_latex_io.h  tensor_mul.h  tensor_negative.h  (+12 more)
include/symTM/: assumptions.h  basic_functions.h  binary_op.h  expression.h  expression_crtp.h  expression_holder.h  functions.h  get_hash_scalar.h  is_symbol.h  n_ary_tree.h  nonlinear_solver_base.h  numsim_cas_forward.h  numsim_cas_type_traits.h  numsim_cas_variant.h  operators.h  printer_base.h  simplify_rule_registry.h  symTM.h  symTM_forward.h  symTM_type_traits.h  symTM_variant.h  symbol_base.h  unary_op.h  utility_func.h
tests/: CMakeLists.txt  CoreBugFixTest.h  FuzzyDiffBase.h  FuzzyScalarDiffTest.h  FuzzyT2sDiffTest.h  FuzzyTensorDiffTest.cpp  FuzzyTensorDiffTest.h  LeviCivitaTest.h  LimitVisitorTest.h  NumericalDiffHelpers.h  NumericalDiffTest.h  ParserTest.h  PredicateExpressionTest.h  ScalarAssumptionTest.h  ScalarComparisonTest.h  ScalarDifferentiationTest.h  ScalarEvaluatorTest.h  ScalarExpressionTest.h  ScalarLatexPrinterTest.h  ScalarPrinterTest.h  ScalarSubstitutionTest.h  SolveTest.h  TensorAlgebraAssumeTest.h  TensorDifferentiationTest.h  TensorEvaluatorTest.h  TensorExpressionTest.h  TensorInvDiffSymTest.h  TensorLatexPrinterTest.h  TensorPrinterTest.h  TensorProjectorDifferentiationTest.h  TensorSpacePropagationTest.h  TensorSubstitutionTest.h  TensorToScalarDifferentiationTest.h  TensorToScalarDivOperatorTest.h  TensorToScalarEvaluatorTest.h  TensorToScalarExpressionTest.h  TensorToScalarLatexPrinterTest.h  TensorToScalarMulOperatorTest.h  TensorToScalarPrinterTest.h  TensorToScalarSubstitutionTest.h  (+6 more)
tests/package_smoke/: CMakeLists.txt  main.cpp  package_smoke_test.cmake
(+431 files in other folders)
